# sora

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
apps/studio/: index.html  package-lock.json  package.json  vite.config.ts
apps/studio/src/: App.tsx  constants.ts  graph.ts  i18n.ts  schemaEditing.ts  styles.css  types.ts  unionFields.ts
crates/sora-cli/: Cargo.toml
crates/sora-cli/src/: args.rs  build.rs  commands.rs  init.rs  lua_parser.rs  lua_type_mapping.rs  main.rs  report.rs  source.rs  studio.rs
crates/sora-codegen/: Cargo.toml
crates/sora-codegen/src/: c.rs  cpp.rs  csharp.rs  dart.rs  ecmascript.rs  erlang.rs  format.rs  generator.rs  go.rs  godot.rs  java.rs  javascript.rs  kotlin.rs  lib.rs  lua.rs  model.rs  options.rs  proto.rs  python.rs  render.rs  rust.rs  scala.rs  target.rs  type_mapping.rs  types.rs  typescript.rs
crates/sora-codegen/src/kotlin/: tests.rs
crates/sora-config-format/: Cargo.toml
crates/sora-config-format/src/: lib.rs
crates/sora-core/: Cargo.toml
crates/sora-core/src/: diff.rs  lib.rs  pipeline.rs  schema_lock.rs
crates/sora-core/src/pipeline/: mod.rs  support.rs  tests.rs
crates/sora-core/tests/: generated_rust_runtime.rs  simple_pipeline.rs
crates/sora-data/: Cargo.toml
crates/sora-data/src/: aggregate.rs  derived.rs  lib.rs  localization.rs  model.rs  scope.rs  validate.rs
crates/sora-data/src/validate/: mod.rs  tests.rs  value.rs
crates/sora-diagnostics/: Cargo.toml
crates/sora-diagnostics/src/: lib.rs
crates/sora-excel/: Cargo.toml
crates/sora-excel/src/: generator.rs  lib.rs  projection.rs  sync.rs  writer.rs
crates/sora-execution/: Cargo.toml
crates/sora-execution/src/: lib.rs
crates/sora-export/: Cargo.toml
crates/sora-export/src/: binary.rs  bundle.rs  cbor.rs  debug_json.rs  exporter.rs  fs_util.rs  i18n.rs  json.rs  lib.rs  protobuf.rs  registry.rs  typed_protobuf.rs
crates/sora-export/src/binary/: encoder.rs
crates/sora-input/: Cargo.toml
crates/sora-input-csv/: Cargo.toml
crates/sora-input-csv/src/: input.rs  reader.rs
crates/sora-input-schema/: Cargo.toml
crates/sora-input-schema/src/: input.rs  schema.rs
crates/sora-input-structured/: Cargo.toml
crates/sora-input-structured/src/: reader.rs
crates/sora-input-toml/: Cargo.toml
crates/sora-input-toml/src/: data.rs  input.rs  lib.rs  schema.rs
crates/sora-input-xlsx/: Cargo.toml
crates/sora-input-xlsx/src/: input.rs  lib.rs  projection.rs  reader.rs  value.rs  workbook.rs
crates/sora-input/src/: cell.rs  defaults.rs  lib.rs  loaded.rs  parser.rs  project.rs  source.rs  traits.rs
crates/sora-ir/: Cargo.toml
crates/sora-ir/src/: fingerprint.rs  input_projection.rs  lib.rs  model.rs  normalize.rs  parse.rs  parser.rs  scope.rs  validate.rs
crates/sora-ir/src/normalize/: codegen.rs  mod.rs  tests.rs
crates/sora-ir/src/validate/: aggregation.rs  derived_field.rs  mod.rs  tests.rs  type_ref.rs
crates/sora-schema/: Cargo.toml
crates/sora-schema/src/: lib.rs  model.rs
crates/sora-studio/: Cargo.toml  build.rs
crates/sora-studio/src/: diff.rs  graph.rs  lib.rs  model.rs  render.rs  server.rs  service.rs  tests.rs
crates/sora-templates/: Cargo.toml
crates/sora-templates/src/: lib.rs
docs/: book.toml  build.sh
docs/src/: SUMMARY.md  cli.md  concepts.md  exports.md  extension.md  index.md  localization.md  project-config.md  quick-start.md  schema.md  studio.md  versioning.md
docs/src/codegen/: adapters.md  overview.md  runtime-formats.md
docs/src/design/: excel-header-projection.md  ir-boundaries.md  overview.md  schema-as-source-of-truth.md
docs/src/export/: formats.md
docs/src/extension/: exporters.md  generators.md
docs/src/schema/: enums-structs-unions.md  formats.md  parsers.md  references.md  tables.md  types.md
docs/src/tutorial/: excel-workflow.md  first-config.md  load-generated-code.md  overview.md
docs/src/zh/: SUMMARY.md  cli.md  concepts.md  exports.md  extension.md  index.md  localization.md  project-config.md  quick-start.md  schema.md  studio.md  versioning.md
docs/theme/: language-toggle.js
examples/showcase/: README.md  project.toml
examples/showcase/tools/build-showcase/: Cargo.toml
examples/showcase/tools/build-showcase/src/: fs_util.rs  main.rs  rows.rs  workbook.rs
examples/simple/: project.toml  schema.toml
scripts/: set_release_version.py  verify_runtime_matrix.py  verify_showcase.py
templates/c/: config.c.j2  config.h.j2  enum.c.j2  enum.h.j2  record.c.j2  record.h.j2  runtime.c.j2  runtime.h.j2  types.c.j2  types.h.j2  union.c.j2  union.h.j2
templates/cpp/: config.hpp.j2  enum.hpp.j2  record.hpp.j2  runtime.hpp.j2  union.hpp.j2
templates/csharp/: config.cs.j2  enum.cs.j2  protobuf_bundle.cs.j2  record.cs.j2  runtime.cs.j2  union.cs.j2
templates/dart/: config.dart.j2  enum.dart.j2  library.dart.j2  record.dart.j2  runtime.dart.j2  union.dart.j2
templates/erlang/: config.erl.j2  enum.erl.j2  record.erl.j2  runtime.erl.j2  union.erl.j2
templates/go/: config.go.j2  enum.go.j2  record.go.j2  runtime.go.j2  union.go.j2
templates/godot/: config.gd.j2  record.gd.j2  runtime.gd.j2
templates/java/: config.java.j2  enum.java.j2  record.java.j2  runtime.java.j2  union.java.j2
templates/javascript/: config.d.ts.j2  config.js.j2  enum.d.ts.j2  enum.js.j2  index.js.j2  record.d.ts.j2  record.js.j2  runtime.d.ts.j2  runtime.js.j2  union.d.ts.j2  union.js.j2
templates/kotlin/: config.kt.j2  data_class.kt.j2  enum.kt.j2  package.kt.j2  runtime.kt.j2  union.kt.j2
templates/lua/: config.lua.j2  enum.lua.j2  record.lua.j2  runtime.lua.j2  union.lua.j2
templates/python/: __init__.py.j2  config.py.j2  enum.py.j2  record.py.j2  runtime.py.j2  union.py.j2
templates/rust/: enum.rs.j2  mod.rs.j2  runtime.rs.j2  struct.rs.j2  union.rs.j2
templates/scala/: config.scala.j2  enum.scala.j2  record.scala.j2  runtime.scala.j2  union.scala.j2
templates/typescript/: config.ts.j2  enum.ts.j2  record.ts.j2  runtime.ts.j2  union.ts.j2
(+204 files in other folders)
