[workspace]
members = [
    "crates/sora-cli",
    "crates/sora-core",
    "crates/sora-schema",
    "crates/sora-ir",
    "crates/sora-input",
    "crates/sora-data",
    "crates/sora-codegen",
    "crates/sora-export",
    "crates/sora-excel",
    "crates/sora-diagnostics",
    "crates/sora-templates",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
heck = "0.5"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
