[workspace]
members = [
    "crates/sora-cli",
    "crates/sora-core",
    "crates/sora-schema",
    "crates/sora-ir",
    "crates/sora-input",
    "crates/sora-input-csv",
    "crates/sora-input-toml",
    "crates/sora-input-xlsx",
    "crates/sora-data",
    "crates/sora-codegen",
    "crates/sora-export",
    "crates/sora-excel",
    "crates/sora-diagnostics",
    "crates/sora-execution",
    "crates/sora-templates",
    "examples/showcase/tools/build-showcase",
    "examples/showcase/rust",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
calamine = "0.35"
clap = { version = "4", features = ["derive"] }
csv = "1"
heck = "0.5"
minijinja = "2"
prost = "0.14"
rayon = "1"
rust_xlsxwriter = "0.95"
rustc-hash = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_cbor = "0.11"
serde_json = "1"
sora-cli = { path = "crates/sora-cli" }
sora-codegen = { path = "crates/sora-codegen" }
sora-core = { path = "crates/sora-core" }
sora-data = { path = "crates/sora-data" }
sora-diagnostics = { path = "crates/sora-diagnostics" }
sora-excel = { path = "crates/sora-excel" }
sora-export = { path = "crates/sora-export" }
sora-execution = { path = "crates/sora-execution" }
sora-input = { path = "crates/sora-input" }
sora-input-csv = { path = "crates/sora-input-csv" }
sora-input-toml = { path = "crates/sora-input-toml" }
sora-input-xlsx = { path = "crates/sora-input-xlsx" }
sora-ir = { path = "crates/sora-ir" }
sora-schema = { path = "crates/sora-schema" }
sora-templates = { path = "crates/sora-templates" }
thiserror = "2"
toml = "0.8"
zstd = "0.13"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
