[package]
name = "sora-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sora"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
sora-codegen.workspace = true
sora-core.workspace = true
sora-export.workspace = true
sora-input-csv.workspace = true
sora-input-toml.workspace = true
sora-input-xlsx.workspace = true
