[package]
name = "sora-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sora"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
mlua.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sora-codegen.workspace = true
sora-core.workspace = true
sora-data.workspace = true
sora-diagnostics.workspace = true
sora-export.workspace = true
sora-execution.workspace = true
sora-input.workspace = true
sora-input-csv.workspace = true
sora-input-toml.workspace = true
sora-input-xlsx.workspace = true
sora-ir.workspace = true
sora-schema.workspace = true
toml.workspace = true
