[package]
name = "sora-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
name = "sora"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
sora-codegen.workspace = true
sora-config-format.workspace = true
sora-core.workspace = true
sora-data.workspace = true
sora-diagnostics.workspace = true
sora-excel.workspace = true
sora-export.workspace = true
sora-execution.workspace = true
sora-input.workspace = true
sora-input-csv.workspace = true
sora-input-schema.workspace = true
sora-input-toml.workspace = true
sora-input-xlsx.workspace = true
sora-ir.workspace = true
sora-schema.workspace = true
