[package]
name = "sora-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
heck.workspace = true
minijinja.workspace = true
serde.workspace = true
serde_json.workspace = true
sora-diagnostics.workspace = true
sora-ir.workspace = true
sora-templates.workspace = true

[dev-dependencies]
sora-schema.workspace = true
toml.workspace = true
