[package]
name = "sora-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
heck.workspace = true
minijinja.workspace = true
serde.workspace = true
serde_json.workspace = true
sora-diagnostics.workspace = true
sora-ir.workspace = true
sora-templates.workspace = true

[dev-dependencies]
sora-schema.workspace = true
toml.workspace = true
