[package]
name = "sora-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sora-codegen = { path = "../sora-codegen" }
sora-data = { path = "../sora-data" }
sora-diagnostics = { path = "../sora-diagnostics" }
sora-excel = { path = "../sora-excel" }
sora-export = { path = "../sora-export" }
sora-ir = { path = "../sora-ir" }
sora-schema = { path = "../sora-schema" }

[dev-dependencies]
toml.workspace = true
