[package]
name = "sora-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
sora-diagnostics = { path = "../sora-diagnostics" }
sora-ir = { path = "../sora-ir" }
toml.workspace = true

[dev-dependencies]
sora-schema = { path = "../sora-schema" }
