[package]
name = "sora-excel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rust_xlsxwriter = "0.95"
sora-diagnostics = { path = "../sora-diagnostics" }
sora-ir = { path = "../sora-ir" }

[dev-dependencies]
sora-schema = { path = "../sora-schema" }
toml.workspace = true
