[package]
name = "sora-excel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rust_xlsxwriter.workspace = true
sora-diagnostics.workspace = true
sora-input.workspace = true
sora-ir.workspace = true

[dev-dependencies]
sora-schema.workspace = true
toml.workspace = true
