[package]
name = "sora-excel"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
rust_xlsxwriter.workspace = true
sora-diagnostics.workspace = true
sora-input.workspace = true
sora-ir.workspace = true

[dev-dependencies]
calamine.workspace = true
sora-schema.workspace = true
toml.workspace = true
