[package]
name = "sora-export"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true
rayon.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
sora-data.workspace = true
sora-diagnostics.workspace = true
sora-ir.workspace = true

[dev-dependencies]
sora-schema.workspace = true
toml.workspace = true
