[package]
name = "sora-export"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
prost.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
sora-data.workspace = true
sora-diagnostics.workspace = true
sora-execution.workspace = true
sora-ir.workspace = true
zstd.workspace = true

[dev-dependencies]
sora-schema.workspace = true
toml.workspace = true
