[package]
name = "sora-input-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
sora-config-format.workspace = true
sora-diagnostics.workspace = true
sora-input.workspace = true
sora-schema.workspace = true
