[package]
name = "sora-input-toml"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sora-data.workspace = true
sora-diagnostics.workspace = true
sora-input.workspace = true
sora-ir.workspace = true
sora-schema.workspace = true
toml.workspace = true
