[package]
name = "sora-input-toml"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
sora-data.workspace = true
sora-diagnostics.workspace = true
sora-input.workspace = true
sora-ir.workspace = true
toml.workspace = true

[dev-dependencies]
sora-schema.workspace = true
