[package]
name = "sora-input-xlsx"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
calamine.workspace = true
sora-data.workspace = true
sora-diagnostics.workspace = true
sora-excel.workspace = true
sora-execution.workspace = true
sora-input.workspace = true
sora-ir.workspace = true
sora-schema.workspace = true

[dev-dependencies]
rust_xlsxwriter.workspace = true
toml.workspace = true
