[package]
name = "sora-input"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
sora-data.workspace = true
sora-diagnostics.workspace = true
sora-ir.workspace = true
sora-schema.workspace = true

[dev-dependencies]
toml.workspace = true
