[package]
name = "sora-input"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde_json.workspace = true
sora-data.workspace = true
sora-diagnostics.workspace = true
sora-execution.workspace = true
sora-ir.workspace = true
sora-schema.workspace = true

[dev-dependencies]
toml.workspace = true
