[package]
name = "sora-showcase-builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
rust_xlsxwriter.workspace = true
sora-codegen.workspace = true
sora-core.workspace = true
sora-excel.workspace = true
sora-export.workspace = true
sora-input-toml.workspace = true
sora-input-xlsx.workspace = true
sora-ir.workspace = true
